package com.main.entities;

import java.util.Date;

import org.springframework.format.annotation.DateTimeFormat;

import jakarta.persistence.Entity;
import jakarta.persistence.EnumType;
import jakarta.persistence.Enumerated;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;

@Entity
@Data
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class Tecnico {
	
	@Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;
    private String nombre;
    private String apellido;
    private String dni;
    @DateTimeFormat(pattern = "dd-MM-yyyy")
    private Date fechaNacimiento;
    private Double sueldo;
    private String telefono;
    private String direccion;
    private String correo;
    @Enumerated(EnumType.STRING)
    private Especialidad especialidad;
    @DateTimeFormat(pattern = "dd-MM-yyyy")
    private Date fechaIngreso;
    @Enumerated(EnumType.STRING)
    private TecEstado estado;
  
    
}